--- a/style/main.css
+++ b/style/main.css
@@ -83,6 +83,7 @@ header nav a:hover{
 .botao:hover{
     background-color: white;
     color: black;
+    -webkit-transform: scale(1.1);
 }
 
 .botao i{
@@ -95,14 +96,29 @@ header nav a:hover{
 
 .filme-principal .container{
     width: 70%;
+    
 }
 
 .box-filme{
     height: 100%;
     width: 100%;
     display: block;
+    
+}
+
+.box-filme:hover{
+    -webkit-transform: scale(1.1);
 }
 
 .carrosel-filmes{
     margin-top: 5px;
+    
+}
+
+.carrosel-filmes img{
+    
+}
+
+.box-filme{
+    
 }
