--- a/style/main.css
+++ b/style/main.css
@@ -108,6 +108,7 @@ header nav a:hover{
 
 .box-filme:hover{
     -webkit-transform: scale(1.1);
+    transition: .3s ease all;
 }
 
 .carrosel-filmes{
